<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.details.DetailsActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/details_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_arrow_back"
                android:layout_marginTop="20dp" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/details_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_toolbar"
            tools:srcCompat="@tools:sample/avatars" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins"
            android:textSize="27sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_poster"
            tools:text="Movie Title: X" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_average"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="42sp"
            android:textColor="@color/pink"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintStart_toStartOf="@id/details_title"
            app:layout_constraintTop_toBottomOf="@id/details_title"
            tools:text="7.3" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white_opacity"
            android:fontFamily="@font/poppins"
            android:textSize="17sp"
            android:layout_marginStart="15dp"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@id/details_average"
            app:layout_constraintTop_toBottomOf="@id/details_title"
            app:layout_constraintBottom_toBottomOf="@id/details_average"
            tools:text="2h25min" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white_opacity"
            android:fontFamily="@font/poppins"
            android:textSize="17sp"
            android:layout_marginStart="8dp"
            android:drawableStart="@drawable/ic_dot"
            android:drawablePadding="8dp"
            app:layout_constraintStart_toEndOf="@id/details_duration"
            app:layout_constraintTop_toBottomOf="@id/details_title"
            app:layout_constraintBottom_toBottomOf="@id/details_average"
            tools:text="Action" />

        <View
            android:id="@+id/details_divider_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/pink"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/details_average" />
        
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/text_synopsis"
            android:fontFamily="@font/poppins"
            android:textSize="22sp"
            android:layout_margin="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_divider_1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_synopsis_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white_opacity"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_synopsis"
            tools:text="With the untimely death of his beloved wife still bitter in his mouth, John Wick, the expert former assassin, receives one final gift from her a precious keepsake to help John..." />

        <View
            android:id="@+id/details_divider_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/pink"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/details_synopsis_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_credits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/white"
            android:text="@string/text_cast_crew"
            android:fontFamily="@font/poppins"
            android:textSize="22sp"
            android:layout_margin="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_divider_2" />
        
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/details_credits_recycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_credits"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="3"
            tools:listitem="@layout/item_credits" />

        <View
            android:id="@+id/details_divider_3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/pink"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/details_credits_recycler" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_photos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins"
            android:textSize="22sp"
            android:text="@string/text_photos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_divider_3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/details_photos_recycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_photos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_photos"
            tools:itemCount="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>